# libfrugalos

./: .travis.yml  Cargo.toml  README.md
src/: consistency.rs  deadline.rs  error.rs  expect.rs  lib.rs  multiplicity.rs  repair.rs  time.rs
src/client/: config.rs  frugalos.rs  mds.rs  mod.rs
src/entity/: bucket.rs  device.rs  mod.rs  node.rs  object.rs  segment.rs  server.rs
src/protobuf/: consistency.rs  deadline.rs  error.rs  expect.rs  mod.rs  multiplicity.rs  net.rs  repair.rs
src/protobuf/entity/: bucket.rs  device.rs  mod.rs  node.rs  object.rs  server.rs
src/protobuf/schema/: config.rs  frugalos.rs  mds.rs  mod.rs  object.rs
src/schema/: config.rs  frugalos.rs  mds.rs  mod.rs
