[package]
edition = "2018"
name = "libfrugalos"
version = "0.7.0"
authors = ["The FrugalOS Developers"]
description = "This crate defines the public interface of `frugalos` for related tools"
homepage = "https://github.com/frugalos/libfrugalos"
repository = "https://github.com/frugalos/libfrugalos"
readme = "README.md"
license = "MIT"

[badges]
travis-ci = {repository = "frugalos/libfrugalos"}

[dependencies]
bytecodec = { version = "0.4", features = ["bincode_codec"] }
fibers_rpc = "0.3"
futures = "0.1"
libc = "0.2"
pin-project = "1"
serde = "1"
serde_derive = "1"
trackable = { version = "1", features = ["serialize"] }
futures03 = { package = "futures", version = "0.3" }


[patch.crates-io]
fibers = { git = "https://github.com/dwango/fibers-rs", branch = "feature/tokio-1.0" }
fibers_rpc = { git = "https://github.com/koba-e964/fibers_rpc", branch = "feature/tokio-1.0" }
trackable = { git = "https://github.com/koba-e964/trackable", branch = "feature/trackable-for-poll"}
